# picam-server

./: Cargo.toml  Cross.toml  README.md  tcp_client.py
docker/: Dockerfile.aarch64-unknown-linux-gnu  common.sh  lib.sh  linux-image.sh  qemu.sh
src/: demo.rs  main.rs
