[package]
name = "picam-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"


[dependencies]
libcamera = "0.3.0"
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
bytes = "1.4"
v4l2r = "0.0.6"

thiserror = "1.0"
log = "0.4.14"
enumn = "0.1.6"
ctrlc = "3.1.4"
clap = "3.2"
env_logger = "0.10"
nix = { version = "0.28", features = ["fs"] }
openh264 = "0.6.6"
