[package]
name = "picam-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"


[dependencies]
libcamera = "0.3.0"
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
v4l2r = { version = "0.0.6", git = "https://github.com/sacovo/v4l2r.git", branch = "encoder-ctls" }
thiserror = "1.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
