[package]
name = "picam-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"


[dependencies]
libcamera = "0.3.0"
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
v4l2r = { version = "0.0.6", git = "https://github.com/sacovo/v4l2r.git", branch = "encoder-ctls" }
thiserror = "1.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
bincode = "1.3.3"
